<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/homepage"
    >

    <TextView
        android:id="@+id/tv_DonotHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DoNotHaveanAccount"
        android:textColor="@color/black"
        android:textSize="@dimen/home_page_Register_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />


    <TextView
        android:id="@+id/et_register_MainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Register"
        android:textColor="@color/lightgreen"
        android:textSize="@dimen/home_page_Register_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toEndOf="@+id/tv_DonotHaveAnAccount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/btn_login_MainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:background="@drawable/normal_button_selected"
        android:paddingLeft="30dp"
        android:paddingTop="4dp"
        android:paddingRight="30dp"
        android:paddingBottom="4dp"
        android:text="@string/btn_Login"
        android:textSize="@dimen/home_page_login_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>