<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerpage">

    <EditText
        android:id="@+id/et_first_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Input_text_Background_colour"
        android:hint="@string/Register_hint_first_name"
        android:inputType="text"
        android:padding="@dimen/Register_InputText_padding"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/Input_text_hint_colour"
        android:textSize="@dimen/Register_Input_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <EditText
        android:id="@+id/et_Last_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/Input_text_Background_colour"
        android:hint="@string/Register_hint_last_name"
        android:inputType="text"
        android:padding="@dimen/Register_InputText_padding"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/Input_text_hint_colour"
        android:textSize="@dimen/Register_Input_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_first_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_first_name"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/et_Address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/Input_text_Background_colour"
        android:hint="@string/Register_hint_Address"
        android:inputType="text"
        android:padding="@dimen/Register_InputText_padding"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/Input_text_hint_colour"
        android:textSize="@dimen/Register_Input_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_Last_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_Last_name"
        app:layout_constraintTop_toBottomOf="@+id/et_Last_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_EmailID"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/Input_text_Background_colour"
        android:hint="@string/Register_hint_EmailID"
        android:inputType="textWebEmailAddress"
        android:padding="@dimen/Register_InputText_padding"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/Input_text_hint_colour"
        android:textSize="@dimen/Register_Input_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_Address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_Address"
        app:layout_constraintTop_toBottomOf="@+id/et_Address"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/Input_text_Background_colour"
        android:hint="@string/Register_hint_Password"
        android:inputType="textPassword"
        android:padding="@dimen/Register_InputText_padding"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/Input_text_hint_colour"
        android:textSize="@dimen/Register_Input_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_Address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_EmailID"
        app:layout_constraintTop_toBottomOf="@+id/et_Address"
        app:layout_constraintVertical_bias="0.242" />

    <EditText
        android:id="@+id/et_ConfrimPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/Input_text_Background_colour"
        android:hint="@string/Register_hint_Confirm_Password"
        android:inputType="textPassword"
        android:padding="@dimen/Register_InputText_padding"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/Input_text_hint_colour"
        android:textSize="@dimen/Register_Input_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_Password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_EmailID"
        app:layout_constraintTop_toBottomOf="@+id/et_Password"
        app:layout_constraintVertical_bias="0.0" />



    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_terms_and_condition"
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_Agree_Terms_and_Condtions"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ConfrimPassword"
        tools:checked="false" />

    <TextView
        android:id="@+id/tv_Agree_Terms_and_Condtions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Agree_to_the_terms_and_condition"
        android:textColor="@color/Agree_to_terms_and_conditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ConfrimPassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_background"
        android:paddingLeft="60dp"
        android:paddingTop="4dp"
        android:paddingRight="60dp"
        android:paddingBottom="4dp"
        android:textColor="@color/white"
        android:textSize="@dimen/Button_textsize"
        android:text="@string/btn_Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Agree_Terms_and_Condtions"
        app:layout_constraintVertical_bias="0.024" />


</androidx.constraintlayout.widget.ConstraintLayout>