<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/loginpage">


    <EditText
        android:id="@+id/et_EmailID_loginPage"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Input_text_Background_colour"
        android:hint="@string/Register_hint_EmailID"
        android:inputType="text"
        android:padding="@dimen/Register_InputText_padding"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/Input_text_hint_colour"
        android:textSize="@dimen/Register_Input_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <EditText
        android:id="@+id/et_Password_LoginPage"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="192dp"
        android:background="@color/Input_text_Background_colour"
        android:hint="@string/Register_hint_Password"
        android:inputType="textPassword"
        android:padding="@dimen/Register_InputText_padding"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/Input_text_hint_colour"
        android:textSize="@dimen/Register_Input_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_EmailID_loginPage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_EmailID_loginPage"
        app:layout_constraintTop_toBottomOf="@+id/et_EmailID_loginPage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_ForgotPassword_LoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ForgotPassword"
        android:textColor="@color/lightgreen"
        app:layout_constraintEnd_toEndOf="@+id/et_Password_LoginPage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_Password_LoginPage"
        app:layout_constraintTop_toBottomOf="@+id/et_Password_LoginPage" />

    <Button
        android:id="@+id/btn_Login_Loginactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="60dp"
        android:paddingTop="4dp"
        android:paddingRight="60dp"
        android:paddingBottom="4dp"
        android:background="@drawable/normal_button"
        android:text="@string/btn_Login"
        android:textColor="@color/white"
        android:textSize="@dimen/Button_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ForgotPassword_LoginActivity"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>